cm4all-beng-proxy (0.5.6) unstable; urgency=low

  * widget-http: send the "Via" request header instead of "X-Forwarded-For"

 --

cm4all-beng-proxy (0.5.5) unstable; urgency=low

  * processor: allow specifying relative URI in c:base=child
  * widget-request: verify the "path" argument
  * widget: allocate address from widget's pool
  * widget-http: support multiple Set-Cookie response headers

 -- Max Kellermann <mk@cm4all.com>  Thu, 04 Jun 2009 15:10:15 +0200

cm4all-beng-proxy (0.5.4) unstable; urgency=low

  * implemented delegation of open() to a helper program
  * added the BASE translation packet, supported by the translation cache
  * deprecated c:mode=proxy
  * rewrite-uri: always enable focus in mode=partial
  * http-cache: don't cache resources with query string (RFC 2616 13.9)
  * http-cache: lock cache items while they are served

 -- Max Kellermann <mk@cm4all.com>  Thu, 28 May 2009 11:44:01 +0200

cm4all-beng-proxy (0.5.3) unstable; urgency=low

  * cgi: close request body on fork() failure
  * fork: added workaround for pipe-to-pipe splice()
  * http-cache: use cache entry when response ETag matches
  * cgi: loop in istream_cgi_read() to prevent blocking
  * cache: check for expired items once a minute
  * cache: optimize search for oldest item

 -- Max Kellermann <mk@cm4all.com>  Wed, 06 May 2009 13:23:46 +0200

cm4all-beng-proxy (0.5.2) unstable; urgency=low

  * added filter cache
  * header-parser: added missing range check in header_parse_line()
  * fork: added event for writing to the child process
  * fork: don't splice() from a pipe
  * response: don't pass request body to unfocused processor
  * added filter type "pipe"

 -- Max Kellermann <mk@cm4all.com>  Wed, 29 Apr 2009 13:24:26 +0200

cm4all-beng-proxy (0.5.1) unstable; urgency=low

  * processor: fixed base=child assertion failure
  * handler: close request body if it was not consumed
  * static-file: generate Last-Modified and ETag response headers