@@ -17,7 +17,30 @@ proxy_handler(struct request *request2)
     struct http_server_request *request = request2->request;
     const struct translate_response *tr = request2->translate.response;
     http_method_t method;
+    struct strmap *headers;
+    const char *p;
     istream_t body;
+
+    headers = strmap_new(request->pool, 32);
+
+    /* generate the "Via" request header */
+
+    p = strmap_get(request->headers, "via");
+    if (p == NULL) {
+        if (request->remote_host != NULL)
+            strmap_add(headers, "via",
+                       p_strcat(request->pool, "1.1 ",
+                                request->remote_host, NULL));
+    } else {
+        if (request->remote_host == NULL)
+            strmap_add(headers, "via", p);
+        else
+            strmap_add(headers, "via",
+                       p_strcat(request->pool, p, ", 1.1 ",
+                                request->remote_host, NULL));
+    }
+
+    /* send a request body? */
 
     if (http_server_request_has_body(request) &&
         (response_dispatcher_wants_body(request2) || request2->body_consumed)) {
@@ -34,8 +57,10 @@ proxy_handler(struct request *request2)
         request2->body_consumed = true;
     }
 
+    /* do it */
+
     http_cache_request(global_http_cache, request->pool,
-                       method, tr->address.u.http, NULL, body,
+                       method, tr->address.u.http, headers, body,
                        &response_handler, request2,
                        request2->async_ref);
 }
